--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Mahmudul protfolio</title>
+    <title>Mahmudul portfolio</title>
 </head>
 
 <body>
+    <section class="first-section">
+        <div class="container">
+            <h1>Welcome To </h1>
+            <h1><span>Mahmudul</span> Own Kingdom</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.That's why I am learning and mastering web development. I will not stop until I become the Web
+                DevelopmentHero.</p>
+            <a target="_blank" href="https://www.linkedin.com/in/mahmudul-hasan-shohag-8ba62a203/">HIRE ME</a>
+        </div>
+        <div class="container">
+            <img src="image/my-bg.jpg" alt="">
+        </div>
 
+    </section>
 </body>
 
 </html>
