--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+    <!-- first-section -->
     <section class="first-section">
         <div class="container">
             <h1>Welcome To </h1>
@@ -28,6 +30,27 @@
         </div>
 
     </section>
+
+    <!-- second section -->
+    <section class="second-section">
+        <div class="container">
+            <img src="image/my-bg2.jpg" alt="">
+        </div>
+        <div class="container">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="">DOWONLOAD RESUME</a>
+
+        </div>
+
+    </section>
+    <!-- third-section -->
+    <section class="third-section">
+
+    </section>
+
 </body>
 
 </html>
